Fixed 支持响应式布局，增加对IE的友好。 Close #409

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,12 +1,12 @@
 <div class="navbar" ng-controller="HeaderController" ng-init="init()">
 	<div class="container">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".sidebar-nav.nav-collapse">
-            <span class="fa fa-bar"></span>
-            <span class="fa fa-bar"></span>
-            <span class="fa fa-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
         </button>
-        <a id="main-menu-toggle" class="hidden-xs open" ng-click="switchMainMenu()"><i class="fa fa fa-bars"></i></a>
-        <a style="padding-bottom: 0px; height: 40px;" class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="#!/crm"><img src="img/logo.png"></a>
+        <a id="main-menu-toggle" class="hidden-xs open" ng-click="switchMainMenu()"><i class="fa fa-bars"></i></a>
+        <a  class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="#!/crm"><img src="img/logo.png"> </a>
         <!-- start: Header Menu -->
         <div class="nav-no-collapse header-nav">
             <ul class="nav navbar-nav pull-right">
@@ -33,6 +33,8 @@
 		<!-- end: Header Menu -->
 	</div>
 </div>
+
+
 <!-- Start: Setting Password -->
 <script type="text/ng-template" id="passwordDialog.html">
 	<div class="modal-header">
