--- a/app/views/returns/profile.html
+++ b/app/views/returns/profile.html
@@ -1,3 +1,4 @@
+<div class="box"></div>
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}} - 详情</h2>
     <div class="box-icon">
@@ -47,4 +48,5 @@
         </div>
     </div>
     <div class="clearfix"></div>
+</div>
 </div>
