--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -1,4 +1,4 @@
-
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span ng-show='!!entity.id'>编辑{{currentView.name}}</span>
@@ -147,4 +147,5 @@
     </div>
 </div>
 </form>
+</div>
 </div>
