--- a/app/views/shop/profile.html
+++ b/app/views/shop/profile.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}} - 详情</h2>
     <div class="box-icon">
@@ -65,7 +66,7 @@
     </div>
     <div class="clearfix"></div>
 </div>
-
+</div>
 
 <script type="text/ng-template" id="Secne2DimensionalCode.html">
   <img ng-src="{{imageUrl}}" style="display: block;clear: both;margin:auto" />
