--- a/app/views/basicEdit.html
+++ b/app/views/basicEdit.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
 	<h2><i ng-class="currentView.icon"></i><span class="break"></span>
 		<span ng-show='!entity.id'>新增{{currentView.name}}</span>
@@ -55,7 +56,7 @@
         </div>
     </form>
 </div>
-
+</div>
 <!-- start: confirm New User Modal -->
 <div modal="shouldOpenCreate" class="modal hide fade">
     <div class="modal-header">
