--- a/app/views/devices/register.html
+++ b/app/views/devices/register.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
 	<h2><i ng-class="currentView.icon"></i><span class="break"></span><span>注册{{currentView.name}}</span></h2>
 	<div class="box-icon">
@@ -51,4 +52,5 @@
       </div>
     </div>
   </form>
+</div>
 </div>
