--- a/app/views/employee/index.html
+++ b/app/views/employee/index.html
@@ -1,5 +1,3 @@
-<div class="row" ng-controller="EmployeesController" ng-init="init()">
-	<div class="box col-lg-12">
-		<div ng-include="activeView" />
-	</div>
+<div ng-controller="EmployeesController" ng-init="init()">
+    <div ng-include="activeView" />
 </div>				
