--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span ng-show='!entity.id'>新增{{currentView.name}}</span>
@@ -123,6 +124,7 @@
             <div class="col-lg-4"></div>
         </div>
     </div>
+</div>
 </div>
 <div class="row">
     <script type="text/ng-template" id="modalAddTagInItem.html">
