--- a/app/views/item/edit.html
+++ b/app/views/item/edit.html
@@ -668,6 +668,7 @@ pre .method .id {
 .jcrop-holder img,img.jcrop-preview{max-width:none;}
 
 </style>
+<div class="box">
 <div class="box-header" ng-init="initForCrop()">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span>编辑{{currentView.name}}</span>
@@ -849,7 +850,7 @@ pre .method .id {
 
     </form>
 </div>
-
+</div>
 
 <div class="row">
     <script type="text/ng-template" id="modalAddTagInItem.html">
