--- a/app/views/item/itemProfile.html
+++ b/app/views/item/itemProfile.html
@@ -1,4 +1,4 @@
-
+<div class="box">
 <div class="box-header">
 	<h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}} - 详情</h2>
 	<div class="box-icon">
@@ -45,4 +45,4 @@
     </div>
 	<div class="clearfix"></div>
 </div>
-
+</div>
