--- a/app/views/merchant/create.html
+++ b/app/views/merchant/create.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2>
         <span>创建商户</span>
@@ -55,4 +56,4 @@
         </div>
     </form>
 </div>
-
+</div>
