--- a/app/views/merchant/edit.html
+++ b/app/views/merchant/edit.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span ng-show='!!entity.id'>{{currentView.name}} - 设置</span>
@@ -170,4 +171,4 @@
         </div>
     </form>
 </div>
-
+</div>
