--- a/app/views/merchant/index.html
+++ b/app/views/merchant/index.html
@@ -1,5 +1,3 @@
-<div class="row" ng-controller="MerchantsController">
-  <div class="box col-lg-12">
+<div ng-controller="MerchantsController">
     <div ng-include="activeView" />
-  </div>
 </div>				
