--- a/app/views/merchant/profile.html
+++ b/app/views/merchant/profile.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
   <div class="row">
     <div class="col-xs-4">
@@ -66,4 +67,5 @@
         <div class="col-lg-2"></div>
     </div>
     <div class="clearfix"></div>
+</div>
 </div>
