--- a/app/views/orders/profile.html
+++ b/app/views/orders/profile.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}} - 详情</h2>
 
@@ -107,4 +108,5 @@
     </div>
 
     <div class="clearfix"></div>
+</div>
 </div>
