--- a/app/views/shop/create.html
+++ b/app/views/shop/create.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span>新增商店</span>
@@ -36,4 +37,5 @@
             </div>
         </div>
     </form>
+</div>
 </div>
