--- a/app/views/skus/create.html
+++ b/app/views/skus/create.html
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="box-header" ng-init="initSkus()">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span ng-show='!entity.id'>进货与核销</span>
@@ -94,7 +95,7 @@
         </div>
     </form>
 </div>
-
+</div>
 <!--START: 新增店长-->
 <script type="text/ng-template" id="createShopManger.html">
     <div class="modal-header">
