--- a/app/views/item/edit.html
+++ b/app/views/item/edit.html
@@ -639,7 +639,7 @@ pre .method .id {
 }
 
 .jcrop-holder{direction:ltr;text-align:left;}
-.jcrop-vline,.jcrop-hline{background:#FFF url(Jcrop.gif);font-size:0;position:absolute;}
+.jcrop-vline,.jcrop-hline{background-color:#FFF;font-size:0;position:absolute;}
 .jcrop-vline{height:100%;width:1px!important;}
 .jcrop-vline.right{right:0;}
 .jcrop-hline{height:1px!important;width:100%;}
