--- a/app/views/item/itemProfile.html
+++ b/app/views/item/itemProfile.html
@@ -15,7 +15,7 @@
 	
 	<div class="col-lg-12">
 		<div class="col-lg-4 col-md-12 col-xs-12" ng-show="imgs.length">
-            <img ng-src="{{img}}" ng-repeat="img in imgs" style="display: block; width: 300px; height: 200px;">
+            <img ng-src="{{img}}" ng-repeat="img in imgs" style="margin: 0 auto; display: block; width: 300px; height: 200px;">
 		</div>
         <div class="col-lg-2 col-md-12 col-xs-12" ng-show="!imgs.length">
         </div>
