--- a/app/views/item/itemProfile.html
+++ b/app/views/item/itemProfile.html
@@ -18,7 +18,7 @@
             <img ng-src="{{img}}" ng-repeat="img in imgs" style="margin-top: 7px; display: block; width: 300px; height: 200px;">
 		</div>
     <div class="col-lg-3 col-md-12 col-xs-12" ng-show="!imgs.length">
-            <img ng-src="../app/img/nopicture.jpg" style="margin-top: 7px; display: block; width: 300px; height: 200px;">
+            <img ng-src="img/nopicture.jpg" style="margin-top: 7px; display: block; width: 300px; height: 200px;">
     </div>
 		<div class="col-lg-8 col-md-12 col-xs-12">
 			<table class="table table-striped">
