--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -20,7 +20,7 @@
             </div>
             <div class="box-content">
               <div class="row" ng-init="initDate()">
-                  <div class="col-lg-3 col-lg-push-1">
+                  <div class="col-lg-3 col-md-3 col-lg-push-1 col-md-push-1">
                       <p class="input-group">
                           <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions"  close-text="关闭" />
                             <span class="input-group-btn">
@@ -43,30 +43,30 @@
                                         <div class="chart-stat">
                                             <div class="chart white" style="height: 40px;">
                                                 <div class="row">
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-primary" style="font-size: 15px;">销售额:</span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="sales.total"></span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-primary" style="font-size: 15px;">销售数:</span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="sales.count"></span>
                                                     </div>
                                                 </div>
                                                 <div class="row" style="margin-top: 10px;">
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-primary" style="font-size: 15px;">退单额:</span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="returns.total"></span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-primary" style="font-size: 15px;">退单数:</span>
                                                     </div>
-                                                    <div class="col-lg-3">
+                                                    <div class="col-lg-3 col-md-3">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="returns.count"></span>
                                                     </div>
                                                 </div>
@@ -83,18 +83,18 @@
                                         <div class="chart-stat">
                                             <div class="chart white" style="height: 40px;">
                                                 <div class="row">
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-primary" style="font-size: 15px;">现金:</span>
                                                     </div>
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="cash.cash"></span>
                                                     </div>
                                                 </div>
                                                 <div class="row" style="margin-top: 10px;">
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-primary" style="font-size: 15px;">微信:</span>
                                                     </div>
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="cash.weixin"></span>
                                                     </div>
                                                 </div>
@@ -111,10 +111,10 @@
                                         <div class="chart-stat">
                                             <div class="chart white" style="height: 40px;">
                                                 <div class="row">
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-primary" style="font-size: 15px;">毛利润:</span>
                                                     </div>
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-6 col-md-6">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="profit"></span>
                                                     </div>
                                                 </div>
@@ -135,7 +135,7 @@
           </div>
           <div class="box-content">
               <div class="row">
-                  <div class="col-lg-10 col-lg-offset-1">
+                  <div class="col-md-10 col-md-offset-1">
                       <div class="row" style="height: 430px;">
                           <div style="">
                               <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
