--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -9,8 +9,8 @@
           <li><a style="color: #fff"> <span ng-bind="currentView.name"></span></a></li>
         </ol>
       </div>
-      <div class="col-xs-6"></div>
-      <div class="col-xs-2">
+      <div class="col-xs-4"></div>
+      <div class="col-xs-4">
         <div class="box-icon">
           <!--START:operator for deletes-->
           <a href="" ng-click="showCheckbox()" title="批量删除" ng-hide="hideManyDel">
@@ -27,33 +27,27 @@
   <div class="box-content">
     <div class="row">
       <!--START:operator for switch page's length-->
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3">
         <div class="row">
-          <div class="col-lg-8">
-            <select class="form-control" ng-model="pagination.iLength"
-                    ng-options="option for option in pagination.iLengthOptions"></select>
+          <div class="col-md-6">
+            <select class="form-control" ng-model="pagination.iLength" ng-options="option for option in pagination.iLengthOptions"></select>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-6">
             <h4>条/页</h4>
           </div>
         </div>
       </div>
       <!--END:operator for switch page's length-->
       <!--START:operator for switch shops-->
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3">
         <div class="row" ng-if="showOptions">
-          <div class="col-lg-8">
-            <select class="form-control" ng-model="currentShowShop.shop"
-                    ng-options="option as option.name for option in allShop">
-              <option value="">-- 选择商店 --</option>
-            </select>
-          </div>
-          <div class="col-lg-4">
-            <h4>切换商店</h4>
-          </div>
+          <select class="form-control" ng-model="currentShowShop.shop"
+                  ng-options="option as option.name for option in allShop">
+            <option value="">-- 选择商店 --</option>
+          </select>
         </div>
       </div>
-      <div class="col-lg-3" ng-if="showExport">
+      <div class="col-lg-3 col-md-3" ng-if="showExport">
         <button class="btn btn-primary" ng-click="exportExcel()" style="width: 100px"><span data-ng-show="!loading">导出Excel</span><span
                 data-ng-show="loading">导出中 <i style="font-size: 15px" data-ng-show="loading"
                                               class="icon ion-loading-c"></i></span></button>
@@ -78,7 +72,7 @@
         </table>
       </div>
       <!--END:operator for switch shops-->
-      <div class="col-lg-3" ng-if="showImport">
+      <div class="col-lg-3 col-md-3" ng-if="showImport">
         <button class="btn btn-primary" ng-click="importExcel()" style="width: 100px">
           <span data-ng-show="!loading">批量导入</span>
           <span data-ng-show="loading">导入中 
@@ -86,7 +80,7 @@
           </span>
         </button>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3">
           <div style="display: inline" ng-if="isBtnGroup">
               <div class="row">
                   <div class="col-lg-6" style="font-size: 15px;margin-top: 5px;">订单状态：</div>
@@ -98,26 +92,25 @@
           </div>
       </div>
       <!--START: operator for search-->
-      <div class="col-lg-3">
-      <div class="" ng-if="isBtnGroup">
-          <div class="row">
-              <div class="col-lg-6" style="font-size: 15px;margin-top: 5px;">付款状态：</div>
-              <div class="col-lg-4">
-                  <select  class="form-control" ng-model="currentBtnForOrder.btn"
-                           ng-options="btn as btn.value for btn in btnsForOrder"></select>
-              </div>
-          </div>
-      </div>
-      <div class="" ng-if="isGroup">
-          <div class="row">
-              <div class="col-lg-6" style="font-size: 15px;margin-top: 5px;">活动状态：</div>
-              <div class="col-lg-4">
-                  <select  class="form-control" ng-model="currentStatus.status"
-                           ng-options="btn as btn.value for btn in statusForGroup"></select>
-              </div>
-          </div>
-      </div>
-
+      <div class="col-lg-3 col-md-3">
+        <div class="" ng-if="isBtnGroup">
+            <div class="row">
+                <div class="col-lg-6" style="font-size: 15px;margin-top: 5px;">付款状态：</div>
+                <div class="col-lg-4">
+                    <select  class="form-control" ng-model="currentBtnForOrder.btn"
+                             ng-options="btn as btn.value for btn in btnsForOrder"></select>
+                </div>
+            </div>
+        </div>
+        <div class="" ng-if="isGroup">
+            <div class="row">
+                <div class="col-lg-6" style="font-size: 15px;margin-top: 5px;">活动状态：</div>
+                <div class="col-lg-4">
+                    <select  class="form-control" ng-model="currentStatus.status"
+                             ng-options="btn as btn.value for btn in statusForGroup"></select>
+                </div>
+            </div>
+        </div>
         <form class="form-search" ng-if="!isBtnGroup&&!isGroup">
           <div class="input-group">
             <input class="form-control" type="search" ng-model="search.text" tooltip="{{searchOptions.tooltip}}"
