--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -1,29 +1,22 @@
-<!-- start: Main Menu -->
 <div id="sidebar-left" class="col-lg-2 col-sm-1" ng-hide="hideMainMenu">
-    <div class="nav-collapse sidebar-nav collapse navbar-collapse bs-navbar-collapse">
-        <ul class="nav nav-tabs nav-stacked main-menu">
-            <li ng-repeat="view in views" ng-class="{active:view == currentView && !view.submenus}">
-                <a ng-click="selectView(view)" data-toggle="collapse" data-target="#collapse{{$index}}" data-parent="#sidebar-left" href="" ng-class="{dropmenu:view.submenus.length > 0}">
-                    <i class={{view.icon}}></i><span class="hidden-sm"> {{view.name}}</span>
-                    <span class="label" ng-if="view.submenus.length">{{view.submenus.length}}</span></a>
-                </a>
-                <div id="collapse{{$index}}" class="collapse" style="margin: 0px; padding: 0px">
-                    <ul style="margin-left:10px;display: block;list-style-type: none ">
-                        <li ng-repeat="subview in view.submenus" ng-class="{active:subview == currentView}" style="margin: 15px 0px">
-                            <a class="submenu" href ng-click="selectView(subview)" style="color:#fff; ">
-                                <div class="row">
-                                    <div class="col-lg-1"><i class={{subview.icon}}></i>
-                                    </div>
-                                    <div class="col-lg-3"><span class="hidden-tablet"> {{subview.name}}</span>
-                                    </div>
-                                    <div class="col-lg-8"></div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+  <div class="nav-collapse sidebar-nav collapse navbar-collapse bs-navbar-collapse">
+    <ul class="nav nav-tabs nav-stacked main-menu">
+      <li ng-repeat="view in views" ng-class="{active:view == currentView && !view.submenus}">
+        <a ng-click="selectView(view)" data-toggle="collapse" data-target="#collapse{{$index}}" data-parent="#sidebar-left" href="" ng-class="{dropmenu:view.submenus.length > 0}">
+          <i class={{view.icon}}></i><span class="hidden-sm"> {{view.name}}</span>
+          <span class="label" ng-if="view.submenus.length">{{view.submenus.length}}</span></a>
+        </a>
+        <div id="collapse{{$index}}" class="collapse">
+          <ul style="list-style-type: none ">
+            <li ng-repeat="subview in view.submenus" ng-class="{active:subview == currentView}" style="margin: 15px 0px">
+              <a class="submenu" href ng-click="selectView(subview)" style="color:#fff; ">
+                <i class={{subview.icon}}></i>
+                <span class="hidden-tablet"> {{subview.name}}</span>
+              </a>
             </li>
-        </ul>
-    </div>
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
-<!-- end: Main Menu -->
