--- a/app/views/merchant/profile.html
+++ b/app/views/merchant/profile.html
@@ -16,56 +16,44 @@
   </div>
 </div>
 <div class="box-content">
-  	<div class="col-lg-12">
+	<div class="col-lg-12">
+    <div class="row">
   		<a ng-repeat="shortcut in profileShortcuts" ng-class="shortcut.class" ng-click="showEdit(currentMerchant.merchant)">
   			<i ng-class="shortcut.icon" />
   			<p>{{shortcut.text}}</p>
-  		</a>
-      <div class="row">
-          <div class="col-lg-2"></div>
-          <div class="col-lg-1" style="position: relative; top: 30px">
-              <h4>当前商户</h4>
-          </div>
-          <div class="col-lg-2" style="position: relative; top: 30px">
-              <select class="form-control" ng-model="currentMerchant.merchant" ng-options="option as option.name for option in allMerchant">
-                  <option value="">-- 选择商户 --</option>
-              </select>
-          </div>
-          <div class="col-lg-2" style="position: relative; top: 30px">
-              <div class="checkbox" ng-init="local.cbx=false">
-                  <label>
-                      <input type="checkbox" ng-model="local.cbx"> 记住我的选择
-                  </label>
-              </div>
-          </div>
-      </div>
-  	</div>
-    <div class="row" style="height: 30px"></div>
-    <div class="row">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-1">
-            <div ng-if="!currentMerchant.merchant.logo">
-                <img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
-            </div>
-            <div ng-if="currentMerchant.merchant.logo">
-                <img ng-src={{logoImg}} alt="Avatar" title="商户logo" style="height: 80px; width: 80px;" class="img-circle">
-            </div>
-        </div>
-        <div class="col-lg-8">
-            <table class="table table-striped">
-                <tbody>
-                <tr ng-repeat="field in profileFields" ng-hide="field.isProfileHide">
-                    <td class="center"><h4>{{field.title}}</h4></td>
-                    <td class="center">
-                        <h4 ng-if="field.value" ng-class="currentMerchant.merchant.fieldClass[field.name]">{{field.value(currentMerchant.merchant)}}</h4>
-                        <h4 ng-if="!field.value" ng-class="currentMerchant.merchant.fieldClass[field.name]">{{valueOfKeyString(currentMerchant.merchant, field.name)}}</h4>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-lg-2"></div>
+  		</a>        
     </div>
-    <div class="clearfix"></div>
+	</div>
+  <div class="row">
+    <div class="col-lg-1 col-lg-offset-1 col-md-2 col-md-offset-1">
+      <div ng-if="!currentMerchant.merchant.logo">
+        <img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
+      </div>
+      <div ng-if="currentMerchant.merchant.logo">
+        <img ng-src={{logoImg}} alt="Avatar" title="商户logo" style="height: 80px; width: 80px;" class="img-circle">
+      </div>
+    </div>
+    <div class="col-md-8">
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <td class="center"><h4>当前商户</h4></td>
+            <td class="center">
+              <select class="form-control" ng-model="currentMerchant.merchant" ng-options="option as option.name for option in allMerchant">
+                <option value="">-- 选择商户 --</option>
+              </select>
+            </td>
+          </tr>
+          <tr ng-repeat="field in profileFields" ng-hide="field.isProfileHide">
+            <td class="center"><h4>{{field.title}}</h4></td>
+            <td class="center">
+              <h4 ng-if="field.value" ng-class="currentMerchant.merchant.fieldClass[field.name]">{{field.value(currentMerchant.merchant)}}</h4>
+              <h4 ng-if="!field.value" ng-class="currentMerchant.merchant.fieldClass[field.name]">{{valueOfKeyString(currentMerchant.merchant, field.name)}}</h4>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>    
+  </div>  
 </div>
 </div>
