--- a/app/views/item/listToolbar.html
+++ b/app/views/item/listToolbar.html
@@ -1,5 +1,5 @@
 <div class="col-md-6">
-  <button class="btn btn-primary" ng-csv="importSampleCsv" csv-header="importHeaders" filename="商品导入模板.csv">
+  <button class="btn btn-primary" ng-csv="importSampleCsv" csv-header="" filename="商品导入模板.csv">
     <i class="fa fa-download fa-fw"></i>下载模板
   </button>  
 </div>
