Fixed: dashboard stat

--- a/app/views/analysis/dashboard.html
+++ b/app/views/analysis/dashboard.html
@@ -25,7 +25,7 @@
   		<div class="smallstat box">
         <i class="fa fa-download fa-4x yellow"></i>
   			<span class="title">毛利润(元)</span>
-  			<span class="value">￥{{skusNum}}</span>
+  			<span class="value">￥{{profit}}</span>
   		</div>
   	</div>
   </div>
